--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         <div class="container">
             <div class="nav-content">
                 <div class="nav-brand">
-                    <a href="#home">Dr. A</a>
+                    <a href="#home">Dr. Ahmed Badawy</a>
+                </div>
+                <div class="mobile-menu-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#education">Education</a></li>
@@ -25,6 +30,33 @@
             </div>
         </div>
     </nav>
+
+    <div class="floating-menu-button">
+        <div class="mobile-menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+
+    <div class="mobile-sidebar">
+        <div class="sidebar-header">
+            <div class="nav-brand">
+                <a href="#home">Dr. A</a>
+            </div>
+            <button class="close-sidebar">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        <ul class="sidebar-links">
+            <li><a href="#education">Education</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#certifications">Certifications</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#development">Development</a></li>
+        </ul>
+    </div>
+    <div class="sidebar-overlay"></div>
 
     <header id="home">
         <div class="container">
